# ImageIQ

./: .env.example  .env.example_new  .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
Tests/: test_unit_repository_ratings.py
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 0eec8704bd23_init.py  2632fb524c3e_add_table.py  2e2e44ea0bab_add.py  4a73f16f3c30_add_conf.py  73546376099d_create_table.py  9d4f02824731_add_active.py  a72a9163d821_create_bannedlist_table.py  c13277fb2f7b_15_01_24.py  ea506d501b7c_delete_table.py  fb33f2e4ddf3_avg_rating_added.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: comments.py  images.py  profile.py  ratings.py  tags.py  users.py
src/routes/: auth.py  comments.py  images.py  ratings.py  users.py
src/schemas/: images.py  users.py
src/services/: asyncdevlogging.py  auth.py  cloud_image.py  email.py  role.py
src/services/css/: email_confirm_complate.css  email_confirm_done.css  new_password.css  password_reset.css  password_reset_done.css
src/services/js/: email_confirm.js  reset_password.js
static/: styles.css
static/client/: comments.html  main.html  profile_template.html  signin.html  signup.html  сreate.html
templates/: index.html  project.html
tests/: conftest.py  conftest_comments.py  test.db  test_main.py  test_repository_images_py.py  test_repository_user.py  test_route_auth.py  test_route_comments.py  test_route_image.py  test_route_rating.py  test_route_user.py  test_unit_repository_comments.py
(+20 files in other folders)
